syntax = "proto3";

package com.bwsw.tstreams.proto;
option optimize_for = SPEED;

message TransactionRequest {
    int64 id = 1;
    int32 partition = 2;
}

message TransactionResponse {
    int64 id = 1;
    int32 partition = 2;
    int64 transaction = 3;
}

message TransactionState {
    enum Status {
        Opened = 0;
        Checkpointed = 1;
        Cancelled = 2;
        Updated = 3;
        Invalid = 4;
    }

    int64 transactionID = 1;
    int32 partition = 2;
    int32 masterID = 3;
    int64 orderID = 4;
    int32 count = 5;
    Status status = 6;
    int64 ttlMs = 7;
}

message TransactionStateList {
    repeated TransactionState states = 1;
}
